--- a/src/renderer/src/style/_variable.scss
+++ b/src/renderer/src/style/_variable.scss
@@ -5,3 +5,11 @@ $color-main: #3b3a42;
 
 $width-header-close: 60px;
 $width-header-extend: 260px;
+
+$padding-both-timer: 40px;
+
+$font-large: 5rem;
+$font-medium: 3.2rem;
+$font-regular: 2.6rem;
+$font-small: 1.6rem;
+$font-tiny: 1rem;
