added basic game logic

--- a/src/renderer/src/style/_variable.scss
+++ b/src/renderer/src/style/_variable.scss
@@ -2,14 +2,18 @@ $foreground: #efefef;
 $background: #5d5c5f;
 
 $color-main: #3b3a42;
+$color-untyped: rgb(157, 157, 157);
 
 $width-header-close: 60px;
 $width-header-extend: 260px;
 
 $padding-both-timer: 40px;
+$padding-vertical-main: 30px;
+$padding-horizontal-main: 54px;
+
 
 $font-large: 5rem;
 $font-medium: 3.2rem;
-$font-regular: 2.6rem;
+$font-regular: 2rem;
 $font-small: 1.6rem;
-$font-tiny: 1rem;
+$font-semi-small: 1.4rem;
